recursion.cons.lessons.recursion.cons.Nfirst.scala.error
nfirst:3: error: not found: value NIL
    return l.head::NIL
                   ^